--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,9 +52,11 @@ stages:
               if [[ "$BLUE_BRANCH" == refs/heads/test/* ]] || [[ "$BLUE_BRANCH" == refs/heads/prod/* ]] || [[ "$GREEN_BRANCH" == refs/heads/test/* ]] || [[ "$GREEN_BRANCH" == refs/heads/prod/* ]]; then
                 echo "##vso[task.setvariable variable=shouldRunTest;isOutput=true]true"
                 echo "Should run TEST stage"
+                echo "Setting shouldRunTest to: true"
               else
                 echo "##vso[task.setvariable variable=shouldRunTest;isOutput=true]false"
                 echo "Should NOT run TEST stage"
+                echo "Setting shouldRunTest to: false"
               fi
 
               # Check for prod branches only
@@ -77,6 +79,12 @@ stages:
               fi
 
               echo "========================="
+
+              # Print the values we just set for verification
+              echo "Final variable values:"
+              echo "shouldRunDev: $(debugOutput.shouldRunDev)"
+              echo "shouldRunTest: $(debugOutput.shouldRunTest)"  
+              echo "shouldRunProd: $(debugOutput.shouldRunProd)"
             displayName: "Print Debug Information"
             name: debugOutput
 
@@ -103,11 +111,7 @@ stages:
   - stage: Test
     displayName: "Test Environment"
     dependsOn: Debug
-    condition: |
-      and(
-        succeeded(),
-        eq(stageDependencies.Debug.DebugJob.outputs['debugOutput.shouldRunTest'], 'true')
-      )
+    condition: succeeded()
     jobs:
       - job: TestJob
         displayName: "Test Job"
@@ -122,10 +126,12 @@ stages:
 
   - stage: Production
     displayName: "Production Environment"
-    dependsOn: Test
+    dependsOn:
+      - Debug
+      - Test
     condition: |
       and(
-        succeeded('Test'),
+        in(dependencies.Test.result, 'Succeeded', 'Skipped'),
         eq(stageDependencies.Debug.DebugJob.outputs['debugOutput.shouldRunProd'], 'true')
       )
     jobs:
